--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
-- title: About
-  url: /about/
+- title: About #네비게이션 바에 표시 되는 이름
+  url: /about/ #클릭시 이동할 URL
 - title: Years
   url: /years/
 - title: Categories
